--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,8 +9,10 @@ alerting:
   alertmanagers:
     - static_configs:
         - targets:
-          # - alertmanager:9093
-
+          - localhost:9093
+rule_files:
+  - dead-mans-snitch-rule.yml
+  
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
   # - "first_rules.yml"
@@ -27,6 +29,12 @@ scrape_configs:
 
     static_configs:
       - targets: ["localhost:9090"]
+      
   - job_name: node_export
      static_configs:
        - targets: ["localhost:9100"]
+       
+  - job_name: pushgateway
+    honor_labels: true
+    static_configs:
+      - targets: ["localhost:9091"]
