--- a/prometheus.yml
+++ b/prometheus.yml
@@ -30,11 +30,11 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
       
-  - job_name: node_export
+  - job_name: "node_export"
      static_configs:
        - targets: ["localhost:9100"]
        
-  - job_name: pushgateway
+  - job_name: "pushgateway"
     honor_labels: true
     static_configs:
       - targets: ["localhost:9091"]
