--- a/prometheus.yml
+++ b/prometheus.yml
@@ -15,7 +15,7 @@ alerting:
 rule_files:
   # - "first_rules.yml"
   # - "second_rules.yml"
-  - dead-mans-snitch-rule.yml
+  #- dead-mans-snitch-rule.yml
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
